# House-Pricing

./: Dockerfile  README.md  app.py  main.py  model.joblib  pyproject.toml  requirements.txt  scaler.joblib
.github/workflows/: deployment.yaml  service.yaml
src/: evaluation.py  model.py  preprocessing.py
static/: index.html
