[project]
name = "house-pricing"
version = "0.1.0"
description = "This project is a example how to deploy a model with docker and kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]
